--- a/spi/spi_master_slave/spi_slave/CMakeLists.txt
+++ b/spi/spi_master_slave/spi_slave/CMakeLists.txt
@@ -5,6 +5,10 @@ add_executable(spi_slave
 # Pull in basic dependencies
 target_link_libraries(spi_slave pico_stdlib hardware_spi)
 
+
+pico_enable_stdio_usb(spi_slave 1)
+pico_enable_stdio_uart(spi_slave 0)
+
 # create map/bin/hex file etc.
 pico_add_extra_outputs(spi_slave)
 
